Bug 475551 - [Specific Color Selector] Labels not updated for chosen RGB color model
Summary: [Specific Color Selector] Labels not updated for chosen RGB color model
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 5.2.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 486083 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-10-13 06:35 UTC by oktopuse
Modified: 2024-09-10 14:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Specific Color Selector in HSL, showing HSV labels (9.25 KB, image/png)
2023-10-13 06:35 UTC, oktopuse
Details

Note You need to log in before you can comment on or make changes to this bug.
Description oktopuse 2023-10-13 06:35:23 UTC
Created attachment 162266 [details]
Specific Color Selector in HSL, showing HSV labels

SUMMARY
When using the Specific Color Selector, the labels for hue, saturation, and value seem to not get updated when you choose a different RGB color model than HSV.

STEPS TO REPRODUCE
1. Open the Specific Color Selector docker
2. Choose the RGB color model at the top
3. In the bottom left, change from RGB to HSV
4. Change from HSV to HSL, HSI, or HSY

OBSERVED RESULT
The labels for H, S, V on the left side stay HSV throughout

EXPECTED RESULT
The labels for H, S, V on the left side update to the current color model (e.g. H, S, L when HSL is selected)

SOFTWARE/OS VERSIONS
Windows: Windows 10 22H2 19045.3448
Qt Version: 5.15.7

ADDITIONAL INFORMATION
Comment 1 wolthera 2023-10-18 11:14:31 UTC
Confirming.
Comment 2 Freya Lupen 2024-09-03 19:11:45 UTC
*** Bug 486083 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2024-09-03 22:44:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2231
Comment 4 Freya Lupen 2024-09-10 14:54:37 UTC
Git commit b726f2d8b767a7032041fda76ab779eb857d72ba by Freya Lupen.
Committed on 10/09/2024 at 14:53.
Pushed by freyalupen into branch 'master'.

Specific Color Selector: Update labels fox HSX

Update the slider labels when switching between HSV/HSL/HSI/HSY.
Also, switch to using QGridLayout so the labels will stay aligned
should their width change, and some minor code cleanup.

M  +49   -45   libs/widgets/kis_color_input.cpp
M  +2    -0    libs/widgets/kis_color_input.h

https://invent.kde.org/graphics/krita/-/commit/b726f2d8b767a7032041fda76ab779eb857d72ba
Comment 5 Freya Lupen 2024-09-10 14:57:23 UTC
Git commit 1371e2b8198c67ff4f5a1337b5bdccead673ba9a by Freya Lupen.
Committed on 10/09/2024 at 14:55.
Pushed by freyalupen into branch 'krita/5.2'.

Specific Color Selector: Update labels fox HSX

Update the slider labels when switching between HSV/HSL/HSI/HSY.
Also, switch to using QGridLayout so the labels will stay aligned
should their width change, and some minor code cleanup.
(cherry picked from commit b726f2d8b767a7032041fda76ab779eb857d72ba)

M  +49   -45   libs/widgets/kis_color_input.cpp
M  +2    -0    libs/widgets/kis_color_input.h

https://invent.kde.org/graphics/krita/-/commit/1371e2b8198c67ff4f5a1337b5bdccead673ba9a