Specific Color Selector: Update labels fox HSX

Update the slider labels when switching between HSV/HSL/HSI/HSY.
Also, switch to using QGridLayout so the labels will stay aligned
should their width change, and some minor code cleanup.

BUG:475551
(cherry picked from commit b726f2d8b767a7032041fda76ab779eb857d72ba)